# Quantum_Metrology_Fisher_LG

./: .gitignore  AKLT Project.ipynb  AKLT_defs.ipynb  Kondo_DMRG_Solver.ipynb  Kondo_DMRG_TeNPy.ipynb  LICENSE  README.md  TFI_DMRG_Solver.ipynb  TFI_Tensor_Net.ipynb  TFI_defs.ipynb  plot_gen.ipynb  pyproject.toml  requirements.txt  setup.py
AKLT/: CSHS Tutorial.ipynb  Spin-1 LG Calculation.nb
Kondo/: Kondo_DMRG_TeNPy.ipynb
TFIM/: TFI_Circuit_Qiskit.ipynb  TFI_DMRG_Quimb.ipynb  TFI_DMRG_TeNPy.ipynb
fisher_lg/: Kondo.py  Models.py  State.py  __init__.py  tools.py
fisher_lg.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tenpy_toycodes/: a_mps.py  b_model.py  c_tebd.py  d_dmrg.py
tenpy_toycodes.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
