[build-system]
requires = ["setuptools >= 77.0.3", "wheel"]
build-backend = "setuptools.build_meta"



[project]
name = "fisher_lg"
version = "0.1.0"
authors = [
  { name="Ian Osborne", email="ianro2@illinois.edu" },
]
description = "A small project ehich seeks to explore the practical relationship between the Quantm Fisher information and the Legget-Garg bound"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/IanROsborne/Quantum_Metrology_Fisher_LG"
Issues = "https://github.com/IanROsborne/Quantum_Metrology_Fisher_LG/issues"


[tool.setuptools.packages.find]
where = ["."]
include = ["fisher_lg*"]